--- a/index.html
+++ b/index.html
@@ -4,10 +4,170 @@
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="style.css" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Nabla&family=Outfit:wght@300;400;600&family=Roboto+Slab:wght@500&display=swap"
+      rel="stylesheet"
+    />
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
-  <body>
+  <body class="arcade">
+    <header>
+      <h1>MEMORY</h1>
+      <ul>
+        <li class="puntos">INTENTOS:</li>
+        <li>TIEMPO 00:00</li>
+      </ul>
+      <!-- <button>MODO OSCURO</button> -->
+    </header>
+    <body>
+      <table>
+        <tr></tr>
+        <tr>
+          <td>
+            <section class="card">
+              <div class="content">
+                <div class="front"></div>
+                <div class="back"></div>
+              </div>
+            </section>
+          </td>
+          <td>
+            <section class="card">
+              <div class="content">
+                <div class="front"></div>
+                <div class="back"></div>
+              </div>
+            </section>
+          </td>
+
+          <td>
+            <section class="card">
+              <div class="content">
+                <div class="front"></div>
+                <div class="back"></div>
+              </div>
+            </section>
+          </td>
+          <td>
+            <section class="card">
+              <div class="content">
+                <div class="front"></div>
+                <div class="back"></div>
+              </div>
+            </section>
+          </td>
+        </tr>
+        <tr>
+          <td>
+            <section class="card">
+              <div class="content">
+                <div class="front"></div>
+                <div class="back"></div>
+              </div>
+            </section>
+          </td>
+          <td>
+            <section class="card">
+              <div class="content">
+                <div class="front"></div>
+                <div class="back"></div>
+              </div>
+            </section>
+          </td>
+
+          <td>
+            <section class="card">
+              <div class="content">
+                <div class="front"></div>
+                <div class="back"></div>
+              </div>
+            </section>
+          </td>
+          <td>
+            <section class="card">
+              <div class="content">
+                <div class="front"></div>
+                <div class="back"></div>
+              </div>
+            </section>
+          </td>
+        </tr>
+        <tr>
+          <td>
+            <section class="card">
+              <div class="content">
+                <div class="front"></div>
+                <div class="back"></div>
+              </div>
+            </section>
+          </td>
+          <td>
+            <section class="card">
+              <div class="content">
+                <div class="front"></div>
+                <div class="back"></div>
+              </div>
+            </section>
+          </td>
+
+          <td>
+            <section class="card">
+              <div class="content">
+                <div class="front"></div>
+                <div class="back"></div>
+              </div>
+            </section>
+          </td>
+          <td>
+            <section class="card">
+              <div class="content">
+                <div class="front"></div>
+                <div class="back"></div>
+              </div>
+            </section>
+          </td>
+        </tr>
+        <tr>
+          <td>
+            <section class="card">
+              <div class="content">
+                <div class="front"></div>
+                <div class="back"></div>
+              </div>
+            </section>
+          </td>
+          <td>
+            <section class="card">
+              <div class="content">
+                <div class="front"></div>
+                <div class="back"></div>
+              </div>
+            </section>
+          </td>
+
+          <td>
+            <section class="card">
+              <div class="content">
+                <div class="front"></div>
+                <div class="back"></div>
+              </div>
+            </section>
+          </td>
+          <td>
+            <section class="card">
+              <div class="content">
+                <div class="front"></div>
+                <div class="back"></div>
+              </div>
+            </section>
+          </td>
+        </tr>
+      </table>
+    </body>
     <script src="index.js"></script>
   </body>
 </html>
