--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
-  <body class="arcade">
+  <body class="">
     <header>
       <h1>MEMORY</h1>
       <ul>
