--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <h1>MEMORY</h1>
       <ul>
         <li class="puntos">INTENTOS:</li>
-        <li>TIEMPO 00:00</li>
+        <li class="tiempo">TIEMPO 0 SEGUNDOS</li>
       </ul>
       <!-- <button>MODO OSCURO</button> -->
     </header>
