--- a/index.html
+++ b/index.html
@@ -12,117 +12,162 @@
     />
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/styles.css">
     <title>Document</title>
   </head>
-  <body class="classic">
+  <body class="">
     <header>
       <h1>MEMORY</h1>
+      <ul>
+        <li class="puntos">INTENTOS:</li>
+        <li>TIEMPO 00:00</li>
+      </ul>
       <!-- <button>MODO OSCURO</button> -->
     </header>
-    <ul class="arcade">
-      <li class="puntos">INTENTOS:</li>
-      <li>TIEMPO 00:00</li>
-    </ul>
     <body>
-      <div class="tablero">
-        <section class="card">
-          <div class="content">
-            <div class="front"></div>
-            <div class="back"></div>
-          </div>
-        </section>
-        <section class="card">
-          <div class="content">
-            <div class="front"></div>
-            <div class="back"></div>
-          </div>
-        </section>    
-        <section class="card">
-          <div class="content">
-            <div class="front"></div>
-            <div class="back"></div>
-          </div>
-        </section>
-        <section class="card">
-          <div class="content">
-            <div class="front"></div>
-            <div class="back"></div>
-          </div>
-        </section>
-        <section class="card">
-          <div class="content">
-            <div class="front"></div>
-            <div class="back"></div>
-          </div>
-        </section> 
-        <section class="card">
-          <div class="content">
-            <div class="front"></div>
-            <div class="back"></div>
-          </div>
-        </section>
-        <section class="card">
-          <div class="content">
-            <div class="front"></div>
-            <div class="back"></div>
-          </div>
-        </section>     
-        <section class="card">
-          <div class="content">
-            <div class="front"></div>
-            <div class="back"></div>
-          </div>
-        </section> 
-        <section class="card">
-          <div class="content">
-            <div class="front"></div>
-            <div class="back"></div>
-          </div>
-        </section>
-        <section class="card">
-          <div class="content">
-            <div class="front"></div>
-            <div class="back"></div>
-          </div>
-        </section>
-        <section class="card">
-          <div class="content">
-            <div class="front"></div>
-            <div class="back"></div>
-          </div>
-        </section>
-        <section class="card">
-          <div class="content">
-            <div class="front"></div>
-            <div class="back"></div>
-          </div>
-        </section>    
-        <section class="card">
-          <div class="content">
-            <div class="front"></div>
-            <div class="back"></div>
-          </div>
-        </section>     
-        <section class="card">
-          <div class="content">
-            <div class="front"></div>
-            <div class="back"></div>
-          </div>
-        </section>    
-        <section class="card">
-          <div class="content">
-            <div class="front"></div>
-            <div class="back"></div>
-          </div>
-        </section>
-        <section class="card">
-          <div class="content">
-            <div class="front"></div>
-            <div class="back"></div>
-          </div>
-        </section>
-      </div>
+      <table>
+        <tr></tr>
+        <tr>
+          <td>
+            <section class="card">
+              <div class="content">
+                <div class="front"></div>
+                <div class="back"></div>
+              </div>
+            </section>
+          </td>
+          <td>
+            <section class="card">
+              <div class="content">
+                <div class="front"></div>
+                <div class="back"></div>
+              </div>
+            </section>
+          </td>
+
+          <td>
+            <section class="card">
+              <div class="content">
+                <div class="front"></div>
+                <div class="back"></div>
+              </div>
+            </section>
+          </td>
+          <td>
+            <section class="card">
+              <div class="content">
+                <div class="front"></div>
+                <div class="back"></div>
+              </div>
+            </section>
+          </td>
+        </tr>
+        <tr>
+          <td>
+            <section class="card">
+              <div class="content">
+                <div class="front"></div>
+                <div class="back"></div>
+              </div>
+            </section>
+          </td>
+          <td>
+            <section class="card">
+              <div class="content">
+                <div class="front"></div>
+                <div class="back"></div>
+              </div>
+            </section>
+          </td>
+
+          <td>
+            <section class="card">
+              <div class="content">
+                <div class="front"></div>
+                <div class="back"></div>
+              </div>
+            </section>
+          </td>
+          <td>
+            <section class="card">
+              <div class="content">
+                <div class="front"></div>
+                <div class="back"></div>
+              </div>
+            </section>
+          </td>
+        </tr>
+        <tr>
+          <td>
+            <section class="card">
+              <div class="content">
+                <div class="front"></div>
+                <div class="back"></div>
+              </div>
+            </section>
+          </td>
+          <td>
+            <section class="card">
+              <div class="content">
+                <div class="front"></div>
+                <div class="back"></div>
+              </div>
+            </section>
+          </td>
+
+          <td>
+            <section class="card">
+              <div class="content">
+                <div class="front"></div>
+                <div class="back"></div>
+              </div>
+            </section>
+          </td>
+          <td>
+            <section class="card">
+              <div class="content">
+                <div class="front"></div>
+                <div class="back"></div>
+              </div>
+            </section>
+          </td>
+        </tr>
+        <tr>
+          <td>
+            <section class="card">
+              <div class="content">
+                <div class="front"></div>
+                <div class="back"></div>
+              </div>
+            </section>
+          </td>
+          <td>
+            <section class="card">
+              <div class="content">
+                <div class="front"></div>
+                <div class="back"></div>
+              </div>
+            </section>
+          </td>
+
+          <td>
+            <section class="card">
+              <div class="content">
+                <div class="front"></div>
+                <div class="back"></div>
+              </div>
+            </section>
+          </td>
+          <td>
+            <section class="card">
+              <div class="content">
+                <div class="front"></div>
+                <div class="back"></div>
+              </div>
+            </section>
+          </td>
+        </tr>
+      </table>
     </body>
-    <script src="scrips.js"></script>
+    <script src="index.js"></script>
   </body>
+</html>
