--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
-  <body class="">
+  <body class="arcade">
     <header>
       <h1>MEMORY</h1>
       <ul>
         <li class="puntos">INTENTOS:</li>
-        <li>TIEMPO 00:00</li>
+        <li class="tiempo">TIEMPO 0 SEGUNDOS</li>
       </ul>
       <!-- <button>MODO OSCURO</button> -->
     </header>
