--- a/index.html
+++ b/index.html
@@ -14,159 +14,113 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
-  <body class="arcade">
+  <body class="classic">
     <header>
       <h1>MEMORY</h1>
-      <ul>
-        <li class="puntos">INTENTOS:</li>
-        <li class="tiempo">TIEMPO 0 SEGUNDOS</li>
-      </ul>
-      <!-- <button>MODO OSCURO</button> -->
     </header>
+    <ul>
+      <li class="puntos">INTENTOS:</li>
+      <li class="tiempo">TIEMPO 00:00</li>
+    </ul>
     <body>
-      <table>
-        <tr></tr>
-        <tr>
-          <td>
-            <section class="card">
-              <div class="content">
-                <div class="front"></div>
-                <div class="back"></div>
-              </div>
-            </section>
-          </td>
-          <td>
-            <section class="card">
-              <div class="content">
-                <div class="front"></div>
-                <div class="back"></div>
-              </div>
-            </section>
-          </td>
-
-          <td>
-            <section class="card">
-              <div class="content">
-                <div class="front"></div>
-                <div class="back"></div>
-              </div>
-            </section>
-          </td>
-          <td>
-            <section class="card">
-              <div class="content">
-                <div class="front"></div>
-                <div class="back"></div>
-              </div>
-            </section>
-          </td>
-        </tr>
-        <tr>
-          <td>
-            <section class="card">
-              <div class="content">
-                <div class="front"></div>
-                <div class="back"></div>
-              </div>
-            </section>
-          </td>
-          <td>
-            <section class="card">
-              <div class="content">
-                <div class="front"></div>
-                <div class="back"></div>
-              </div>
-            </section>
-          </td>
-
-          <td>
-            <section class="card">
-              <div class="content">
-                <div class="front"></div>
-                <div class="back"></div>
-              </div>
-            </section>
-          </td>
-          <td>
-            <section class="card">
-              <div class="content">
-                <div class="front"></div>
-                <div class="back"></div>
-              </div>
-            </section>
-          </td>
-        </tr>
-        <tr>
-          <td>
-            <section class="card">
-              <div class="content">
-                <div class="front"></div>
-                <div class="back"></div>
-              </div>
-            </section>
-          </td>
-          <td>
-            <section class="card">
-              <div class="content">
-                <div class="front"></div>
-                <div class="back"></div>
-              </div>
-            </section>
-          </td>
-
-          <td>
-            <section class="card">
-              <div class="content">
-                <div class="front"></div>
-                <div class="back"></div>
-              </div>
-            </section>
-          </td>
-          <td>
-            <section class="card">
-              <div class="content">
-                <div class="front"></div>
-                <div class="back"></div>
-              </div>
-            </section>
-          </td>
-        </tr>
-        <tr>
-          <td>
-            <section class="card">
-              <div class="content">
-                <div class="front"></div>
-                <div class="back"></div>
-              </div>
-            </section>
-          </td>
-          <td>
-            <section class="card">
-              <div class="content">
-                <div class="front"></div>
-                <div class="back"></div>
-              </div>
-            </section>
-          </td>
-
-          <td>
-            <section class="card">
-              <div class="content">
-                <div class="front"></div>
-                <div class="back"></div>
-              </div>
-            </section>
-          </td>
-          <td>
-            <section class="card">
-              <div class="content">
-                <div class="front"></div>
-                <div class="back"></div>
-              </div>
-            </section>
-          </td>
-        </tr>
-      </table>
+      <div class="tablero">
+        <section class="card">
+          <div class="content">
+            <div class="front"></div>
+            <div class="back"></div>
+          </div>
+        </section>
+        <section class="card">
+          <div class="content">
+            <div class="front"></div>
+            <div class="back"></div>
+          </div>
+        </section>
+        <section class="card">
+          <div class="content">
+            <div class="front"></div>
+            <div class="back"></div>
+          </div>
+        </section>
+        <section class="card">
+          <div class="content">
+            <div class="front"></div>
+            <div class="back"></div>
+          </div>
+        </section>
+        <section class="card">
+          <div class="content">
+            <div class="front"></div>
+            <div class="back"></div>
+          </div>
+        </section>
+        <section class="card">
+          <div class="content">
+            <div class="front"></div>
+            <div class="back"></div>
+          </div>
+        </section>
+        <section class="card">
+          <div class="content">
+            <div class="front"></div>
+            <div class="back"></div>
+          </div>
+        </section>
+        <section class="card">
+          <div class="content">
+            <div class="front"></div>
+            <div class="back"></div>
+          </div>
+        </section>
+        <section class="card">
+          <div class="content">
+            <div class="front"></div>
+            <div class="back"></div>
+          </div>
+        </section>
+        <section class="card">
+          <div class="content">
+            <div class="front"></div>
+            <div class="back"></div>
+          </div>
+        </section>
+        <section class="card">
+          <div class="content">
+            <div class="front"></div>
+            <div class="back"></div>
+          </div>
+        </section>
+        <section class="card">
+          <div class="content">
+            <div class="front"></div>
+            <div class="back"></div>
+          </div>
+        </section>
+        <section class="card">
+          <div class="content">
+            <div class="front"></div>
+            <div class="back"></div>
+          </div>
+        </section>
+        <section class="card">
+          <div class="content">
+            <div class="front"></div>
+            <div class="back"></div>
+          </div>
+        </section>
+        <section class="card">
+          <div class="content">
+            <div class="front"></div>
+            <div class="back"></div>
+          </div>
+        </section>
+        <section class="card">
+          <div class="content">
+            <div class="front"></div>
+            <div class="back"></div>
+          </div>
+        </section>
+      </div>
     </body>
     <script src="index.js"></script>
   </body>
