--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
     <header>
       <h1>MEMORY</h1>
     </header>
-    <ul>
-      <li class="puntos">INTENTOS:</li>
-      <li class="tiempo">TIEMPO 00:00</li>
-    </ul>
-    <body>
+    <main>
+      <ul class ="">
+        <li class="puntos">INTENTOS:</li>
+        <li class="tiempo">TIEMPO 00:00</li>
+      </ul>
       <div class="tablero">
         <section class="card">
           <div class="content">
@@ -121,7 +121,7 @@
           </div>
         </section>
       </div>
-    </body>
+    </main>
     <script src="index.js"></script>
   </body>
 </html>
