cartas aleatorias solucionado,las animaciones ya no crean un scroll,reseteo arreglado, puntero mas algun cambio de diseño

--- a/index.html
+++ b/index.html
@@ -10,164 +10,119 @@
       href="https://fonts.googleapis.com/css2?family=Nabla&family=Outfit:wght@300;400;600&family=Roboto+Slab:wght@500&display=swap"
       rel="stylesheet"
     />
+    <link rel="shortcut icon" href="img/Memory.png" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>MEMORY</title>
   </head>
-  <body class="">
+  <body class="classic">
     <header>
       <h1>MEMORY</h1>
-      <ul>
-        <li class="puntos">INTENTOS:</li>
-        <li>TIEMPO 00:00</li>
-      </ul>
-      <!-- <button>MODO OSCURO</button> -->
     </header>
-    <body>
-      <table>
-        <tr></tr>
-        <tr>
-          <td>
-            <section class="card">
-              <div class="content">
-                <div class="front"></div>
-                <div class="back"></div>
-              </div>
-            </section>
-          </td>
-          <td>
-            <section class="card">
-              <div class="content">
-                <div class="front"></div>
-                <div class="back"></div>
-              </div>
-            </section>
-          </td>
-
-          <td>
-            <section class="card">
-              <div class="content">
-                <div class="front"></div>
-                <div class="back"></div>
-              </div>
-            </section>
-          </td>
-          <td>
-            <section class="card">
-              <div class="content">
-                <div class="front"></div>
-                <div class="back"></div>
-              </div>
-            </section>
-          </td>
-        </tr>
-        <tr>
-          <td>
-            <section class="card">
-              <div class="content">
-                <div class="front"></div>
-                <div class="back"></div>
-              </div>
-            </section>
-          </td>
-          <td>
-            <section class="card">
-              <div class="content">
-                <div class="front"></div>
-                <div class="back"></div>
-              </div>
-            </section>
-          </td>
-
-          <td>
-            <section class="card">
-              <div class="content">
-                <div class="front"></div>
-                <div class="back"></div>
-              </div>
-            </section>
-          </td>
-          <td>
-            <section class="card">
-              <div class="content">
-                <div class="front"></div>
-                <div class="back"></div>
-              </div>
-            </section>
-          </td>
-        </tr>
-        <tr>
-          <td>
-            <section class="card">
-              <div class="content">
-                <div class="front"></div>
-                <div class="back"></div>
-              </div>
-            </section>
-          </td>
-          <td>
-            <section class="card">
-              <div class="content">
-                <div class="front"></div>
-                <div class="back"></div>
-              </div>
-            </section>
-          </td>
-
-          <td>
-            <section class="card">
-              <div class="content">
-                <div class="front"></div>
-                <div class="back"></div>
-              </div>
-            </section>
-          </td>
-          <td>
-            <section class="card">
-              <div class="content">
-                <div class="front"></div>
-                <div class="back"></div>
-              </div>
-            </section>
-          </td>
-        </tr>
-        <tr>
-          <td>
-            <section class="card">
-              <div class="content">
-                <div class="front"></div>
-                <div class="back"></div>
-              </div>
-            </section>
-          </td>
-          <td>
-            <section class="card">
-              <div class="content">
-                <div class="front"></div>
-                <div class="back"></div>
-              </div>
-            </section>
-          </td>
-
-          <td>
-            <section class="card">
-              <div class="content">
-                <div class="front"></div>
-                <div class="back"></div>
-              </div>
-            </section>
-          </td>
-          <td>
-            <section class="card">
-              <div class="content">
-                <div class="front"></div>
-                <div class="back"></div>
-              </div>
-            </section>
-          </td>
-        </tr>
-      </table>
-    </body>
+    <main>
+      <ul class="">
+        <li class="puntos">INTENTOS:</li>
+        <li class="tiempo">TIEMPO 00:00</li>
+      </ul>
+      <div class="tablero">
+        <section class="card">
+          <div class="content">
+            <div class="front"></div>
+            <div class="back"></div>
+          </div>
+        </section>
+        <section class="card">
+          <div class="content">
+            <div class="front"></div>
+            <div class="back"></div>
+          </div>
+        </section>
+        <section class="card">
+          <div class="content">
+            <div class="front"></div>
+            <div class="back"></div>
+          </div>
+        </section>
+        <section class="card">
+          <div class="content">
+            <div class="front"></div>
+            <div class="back"></div>
+          </div>
+        </section>
+        <section class="card">
+          <div class="content">
+            <div class="front"></div>
+            <div class="back"></div>
+          </div>
+        </section>
+        <section class="card">
+          <div class="content">
+            <div class="front"></div>
+            <div class="back"></div>
+          </div>
+        </section>
+        <section class="card">
+          <div class="content">
+            <div class="front"></div>
+            <div class="back"></div>
+          </div>
+        </section>
+        <section class="card">
+          <div class="content">
+            <div class="front"></div>
+            <div class="back"></div>
+          </div>
+        </section>
+        <section class="card">
+          <div class="content">
+            <div class="front"></div>
+            <div class="back"></div>
+          </div>
+        </section>
+        <section class="card">
+          <div class="content">
+            <div class="front"></div>
+            <div class="back"></div>
+          </div>
+        </section>
+        <section class="card">
+          <div class="content">
+            <div class="front"></div>
+            <div class="back"></div>
+          </div>
+        </section>
+        <section class="card">
+          <div class="content">
+            <div class="front"></div>
+            <div class="back"></div>
+          </div>
+        </section>
+        <section class="card">
+          <div class="content">
+            <div class="front"></div>
+            <div class="back"></div>
+          </div>
+        </section>
+        <section class="card">
+          <div class="content">
+            <div class="front"></div>
+            <div class="back"></div>
+          </div>
+        </section>
+        <section class="card">
+          <div class="content">
+            <div class="front"></div>
+            <div class="back"></div>
+          </div>
+        </section>
+        <section class="card">
+          <div class="content">
+            <div class="front"></div>
+            <div class="back"></div>
+          </div>
+        </section>
+      </div>
+    </main>
     <script src="index.js"></script>
   </body>
 </html>
