--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
       <h1>MEMORY</h1>
     </header>
     <main>
-      <ul class ="">
+      <ul class="">
         <li class="puntos">INTENTOS:</li>
-        <li class="tiempo">TIEMPO 00:00</li>
+        <li class="segundos" id="minutos">TIEMPO 00:00</li>
       </ul>
       <div class="tablero">
         <section class="card">
