tiempo en minutos y segundos

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <ul class="">
 
         <li class="puntos">INTENTOS:</li>
-        <li class="tiempo">TIEMPO 00:00</li>
+        <li class="segundos" id="minutos">TIEMPO 00:00</li>
       </ul>
       <div class="tablero">
         <section class="card">
